--- a/direitoSimplesFront/src/app/navbar/navbar.component.html
+++ b/direitoSimplesFront/src/app/navbar/navbar.component.html
@@ -1,1 +1,17 @@
-<p>navbar worksa!</p>
+<nav class='navbar'>
+    <div class="estudandodireito">
+        <h1>Estudando</h1>
+        <h1>Direito</h1>
+    </div>
+    
+    <ul>
+        <li><a href="#simulados">Simulados</a></li>
+        <li><a href="#downloads">Downloads</a></li>
+        <li><a href="#ajuda">Ajuda</a></li>
+        <li><a href="#caminho-diario">Caminho Diário</a></li>
+    </ul>
+    <div class="perfilnav">
+        <a href="#perfil">Perfil</a>
+    </div>
+    
+</nav>
