--- a/direitoSimplesFront/src/app/home/home.component.html
+++ b/direitoSimplesFront/src/app/home/home.component.html
@@ -4,7 +4,17 @@
       <div class="infohomecontainer">
         <h1>Comece a estudar agora  as novas mudanças do código penal!</h1>
         <p>Atualizado com a nova mudança do cod. penal</p>
+        <a href='#'><h3 id="bnt-vamosla">Vamos la!</h3></a>
+        <div class="containerimgs">
+          <img src="assets/img/questao.png" class="questao" alt="questao exemplo">
+          <img src="assets/img/corujadireito.png" class="img-coruja" alt="coruja">
+        </div>
       </div>
+
+    </div>
+    <div class="container2">
+      <h1>Simulados do com questões atualizadas</h1>
+      <img src="assets/img/questao.png" id="questaosimulado" alt="questao exemplo">
     </div>
 
 </div>
