--- a/direitoSimplesFront/src/app/home/home.component.scss
+++ b/direitoSimplesFront/src/app/home/home.component.scss
@@ -1,9 +1,12 @@
 @use '../../styles.scss';
 
+a{
+    text-decoration: none;
+}
 .homecontainer {
-    background: linear-gradient(90deg, #0A142F, #3E5286);
+    background: linear-gradient(90deg,#0A142F, #3E5286);
     width: 100%;
-    height: 32rem;
+    height: 37rem;
     display: flex;
     justify-content: center;
 }
@@ -12,8 +15,48 @@
 
 }
 .infohomecontainer{
-    width: 30rem;
+    width: 28rem;
     text-align: center;
-    
+}
+.containerimgs{
+    display: flex;
 
+}
+.img-coruja{
+    margin-top: 8rem;
+    width: 12rem;
+    height: 12rem;
+}
+.questao{
+    width: 28rem;
+    height: 15rem;
+    margin-right: -5rem;
+    margin-left: 1.4rem;
+}
+
+#bnt-vamosla{
+    background-color: white;
+    color: #131D29;
+    border: none;
+    padding: 0.5rem 1rem;
+    border-radius: 0.5rem;
+    font-size: 1rem;
+    cursor: pointer;
+    margin: 1rem 10rem 1rem 10rem;
+}
+.container2{
+    padding: 2rem 0 2rem 0;
+    background-color: #E0F7FA;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-evenly;
+}
+.container2 h1{
+    width: 23rem;
+    text-align: center;
+}
+#questaosimulado{
+    width: 28rem;
+    height: 15rem;
 }
