--- a/direitoSimplesFront/src/app/question/question.component.scss
+++ b/direitoSimplesFront/src/app/question/question.component.scss
@@ -87,6 +87,7 @@
     background: #2a3e82;
     margin-top: 4px;
   }
+
   
   .alternative-text {
     flex: 1;
@@ -107,7 +108,7 @@
   
   .question-footer {
     display: flex;
-    justify-content: flex-end;
+    justify-content: space-between;
     align-items: center;
     margin-top: 2rem;
   }
