--- a/direitoSimplesFront/src/app/question/question.component.scss
+++ b/direitoSimplesFront/src/app/question/question.component.scss
@@ -5,9 +5,25 @@
     padding: 1rem 2rem;
   }
   
+  .fullscreen-button {
+    background: transparent;
+    border: none;
+    font-size: 1.5rem;
+    cursor: pointer;
+
+    &:hover {
+      transform: scale(1.2);
+    }
+  }
+  .fullscreen-button img {
+    width: 30px;
+    height: 30px;
+  }
+  
+  
   .question-header {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
     margin-bottom: 1rem;
   }
@@ -84,9 +100,16 @@
     width: 20px;
     height: 20px;
     border-radius: 50%;
-    background: #2a3e82;
+    border: 2px solid #2a3e82;
+    background: transparent;
     margin-top: 4px;
+    transition: background 0.3s ease;
   }
+  
+  .alternatives li.selected .circle {
+    background: #2a3e82;
+  }
+  
 
   
   .alternative-text {
