--- a/direitoSimplesFront/src/app/simulado/simulado.component.scss
+++ b/direitoSimplesFront/src/app/simulado/simulado.component.scss
@@ -1,18 +1,133 @@
-button {
-    margin: 5px;
-    padding: 8px 12px;
-    border-radius: 5px;
-    border: 1px solid #ccc;
-    cursor: pointer;
+.question-wrapper {
+  font-family: 'Poppins', sans-serif;
+  max-width: 900px;
+  margin: auto;
+  padding: 1rem 2rem;
+}
+
+.question-header {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  margin-bottom: 1rem;
+}
+
+.mascot {
+  width: 120px;
+}
+
+.question-counter {
+  font-size: 1.1rem;
+  font-weight: 500;
+}
+
+.fullscreen-button {
+  background: transparent;
+  border: none;
+  cursor: pointer;
+
+  img {
+    width: 30px;
+    height: 30px;
   }
-  
-  button.selected {
-    background-color: #d0f0d0;
-    font-weight: bold;
+
+  &:hover {
+    transform: scale(1.2);
   }
-  
-  button:disabled {
-    opacity: 0.5;
-    cursor: not-allowed;
-  }
-  
+}
+
+.question-text {
+  font-size: 1.3rem;
+  font-weight: 600;
+}
+
+.alternatives {
+  margin-top: 1rem;
+  display: flex;
+  flex-direction: column;
+  gap: 0.7rem;
+}
+
+.alternative button {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+  width: 100%;
+  padding: 1rem;
+  background: #f5f7fa;
+  border: none;
+  border-radius: 8px;
+  text-align: left;
+  cursor: pointer;
+  font-size: 1rem;
+  color: #333;
+  transition: background 0.3s ease;
+}
+
+.alternative.selected button {
+  background: #1a2e5a4a;
+  color: white;
+}
+
+.circle {
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  border: 2px solid #2a3e82;
+  background: transparent;
+  transition: background 0.3s ease;
+}
+
+.alternative.selected .circle {
+  background: #2a3e82;
+}
+
+.alternative-text {
+  flex: 1;
+}
+
+.question-footer {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 2rem;
+}
+
+.skip {
+  background: #1a2e5a;
+  color: white;
+  padding: 0.6rem 1rem;
+  border: none;
+  border-radius: 8px;
+  font-size: 1rem;
+}
+
+.submit {
+  background: #0f1633;
+  color: white;
+  padding: 0.8rem 1.4rem;
+  border: none;
+  border-radius: 10px;
+  font-weight: bold;
+  font-size: 1rem;
+  cursor: pointer;
+}
+.resultado {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 1rem;
+  margin-top: 2rem;
+}
+
+.resultado-alternatives {
+  list-style-type: decimal;
+  margin-top: 1rem;
+}
+
+.resultado-alternative {
+  font-size: 1.5rem;
+  margin-bottom: 1rem;
+  line-height: 1.6;
+  padding-left: 3rem;
+}
