--- a/direitoSimplesFront/src/app/home/home.component.html
+++ b/direitoSimplesFront/src/app/home/home.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="homeData">
+<div>
     <app-navbar></app-navbar>
     <div class="homecontainer">    
       <div class="infohomecontainer">
