--- a/direitoSimplesFront/src/app/login/login.component.html
+++ b/direitoSimplesFront/src/app/login/login.component.html
@@ -15,6 +15,7 @@
         </div>
         <button type="submit">Login</button>
       </form>
+      <p class="register-redirecionar" (click)="redirecionar_register()">Você não está logado? registre-se aqui!</p>
       <div *ngIf="errorMessage" class="error">
         {{ errorMessage }}
       </div>
