nav bar adicionada a simulados e aut

--- a/direitoSimplesFront/src/app/simulado/simulado-list/simulado-list.component.html
+++ b/direitoSimplesFront/src/app/simulado/simulado-list/simulado-list.component.html
@@ -1,5 +1,6 @@
-<!-- <app-inicionavbar></app-inicionavbar> -->
-<div class="simulados-container">
+<section class="section-simulado-list">
+  <app-inicionavbar></app-inicionavbar>
+  <div class="simulados-container">
     <h2>Simulados Disponíveis</h2>
   
     <ul class="simulados-list">
@@ -13,3 +14,4 @@
     </ul>
   </div>
   
+</section>
