--- a/direitoSimplesFront/src/app/question/question.component.html
+++ b/direitoSimplesFront/src/app/question/question.component.html
@@ -1,8 +1,11 @@
 <div class="question-header">
   <img src="/assets/img/corujadireito.png" alt="Coruja Advogada" class="mascot" />
-  <p class="question-counter">
-    Questão {{ questionIndex + 1 }} de {{ totalQuestions }}
-  </p>
+  <div class="progress-container">
+    <span class="progress-label">{{ getProgress() }}%</span>
+    <div class="progress-bar">
+      <div class="progress-fill" [style.width.%]="getProgress()"></div>
+    </div>
+  </div>
   <button class="fullscreen-button" (click)="toggleFullscreen()">
     <button class="fullscreen-button" (click)="toggleFullscreen()" aria-label="Tela cheia">
       <img src="/assets/icons/telacheia.svg" alt="Tela cheia" />
@@ -45,7 +48,7 @@
     </button>
 
     <button class="skip" (click)="skipQuestion()" [disabled]="questionIndex >= totalQuestions - 1">
-      Pular questão
+      Próxima questão
     </button>
   </div>
 
