--- a/direitoSimplesFront/src/app/question/question.component.scss
+++ b/direitoSimplesFront/src/app/question/question.component.scss
@@ -27,29 +27,32 @@
     align-items: center;
     margin-bottom: 1rem;
   }
+  .progress-container {
+    position: relative;
+    width: 65%;
+    margin: 20px 0;
+  }
   
-  .progress-bar-container {
-    flex: 1;
+  .progress-label {
+    font-weight: bold;
+    position: absolute;
+    left: 0;
+    top: -25px;
   }
   
   .progress-bar {
+    background-color: #3f528e;
+    border-radius: 10px;
+    height: 20px;
     width: 100%;
-    height: 10px;
-    background: #dbe0f4;
-    border-radius: 5px;
-    margin-top: 0.3rem;
     overflow: hidden;
   }
   
   .progress-fill {
+    background-color: #0b0f26;
     height: 100%;
-    background: #2a3e82;
-    transition: width 0.3s ease;
-  }
-  
-  .timer {
-    font-size: 1.2rem;
-    font-weight: bold;
+    transition: width 0.3s ease-in-out;
+    border-radius: 10px;
   }
   
   .question-content {
