--- a/direitoSimplesFront/src/app/simulado/simulado.component.html
+++ b/direitoSimplesFront/src/app/simulado/simulado.component.html
@@ -1,9 +1,12 @@
 <div *ngIf="!finalizado" class="question-wrapper">
   <div class="question-header">
     <img src="/assets/img/corujadireito.png" alt="Coruja Advogada" class="mascot" />
-    <p class="question-counter">
-      Pergunta {{ currentQuestionIndex + 1 }} de {{ questions.length }}
-    </p>
+    <div class="progress-container">
+      <span class="progress-label">{{ getProgress() }}%</span>
+      <div class="progress-bar">
+        <div class="progress-fill" [style.width.%]="getProgress()"></div>
+      </div>
+    </div>
     <button class="fullscreen-button" (click)="toggleFullscreen()" aria-label="Tela cheia">
       <img src="/assets/icons/telacheia.svg" alt="Tela cheia" />
     </button>
