--- a/direitoSimplesFront/src/app/admin-panel/admin-panel.component.scss
+++ b/direitoSimplesFront/src/app/admin-panel/admin-panel.component.scss
@@ -137,4 +137,16 @@ h1 {
   .logout-button:hover {
     background-color: #bb2d3b;
   }
-  
+  li.buttons_editar_simulado{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+  }
+
+  ul.itens_editar_simulado{
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    align-items: center;
+  }
