--- a/direitoSimplesFront/src/app/simulado/simulado.component.scss
+++ b/direitoSimplesFront/src/app/simulado/simulado.component.scss
@@ -4,6 +4,12 @@
   margin: auto;
   padding: 1rem 2rem;
 }
+.itens-meio{
+  width: 70%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 
 .question-header {
   display: flex;
@@ -133,6 +139,16 @@
   font-weight: bold;
   font-size: 1rem;
   cursor: pointer;
+}
+.submit-leave{
+  background-color: #ffffff00;
+  border: none;
+  font-size: 1rem;
+  cursor: pointer;
+}
+.submit-leave img{
+  width: 2.5rem;
+  height: 2.5rem;
 }
 .resultado{
  margin: 2rem;
