--- a/direitoSimplesFront/src/app/simulado/simulado-list/simulado-list.component.scss
+++ b/direitoSimplesFront/src/app/simulado/simulado-list/simulado-list.component.scss
@@ -3,7 +3,7 @@
 }
 .simulados-container {
     max-width: 800px;
-    margin: 40px auto;
+    margin: 40px 0 0 30%;
     padding: 20px;
     font-family: 'Poppins', sans-serif;
     color: #fff;
