--- a/direitoSimplesFront/src/app/admin-panel/admin-panel.component.scss
+++ b/direitoSimplesFront/src/app/admin-panel/admin-panel.component.scss
@@ -2,7 +2,26 @@ main {
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 0 10rem 0 10rem;
+  padding: 0 5rem 0 5rem;
+}
+
+.question-section{
+  display: flex;
+}
+form {
+  display: flex;
+  flex-direction: column;
+  gap: 0.75rem;
+  background: #f9f9f9;
+  padding: 1.5rem;
+  border-radius: 10px;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.05);
+  width: 35rem;
+}
+
+.editar-excluir{
+  display: flex;
+  flex-direction: column;
 }
 
 h1 {
@@ -11,17 +30,6 @@ h1 {
     margin-bottom: 1.5rem;
   }
   
-  form {
-    display: flex;
-    flex-direction: column;
-    gap: 0.75rem;
-    margin-bottom: 2rem;
-    background: #f9f9f9;
-    padding: 1.5rem;
-    border-radius: 10px;
-    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.05);
-    width: 100%;
-  }
   
   input[type="text"], input[type="checkbox"], input[formControlName] {
     padding: 0.5rem;
@@ -38,7 +46,7 @@ h1 {
     border-radius: 6px;
     cursor: pointer;
     font-weight: 600;
-    width: fit-content;
+
   }
   
   button:hover {
@@ -66,11 +74,10 @@ h1 {
   }
   
   .existing-section {
-    margin-top: 2rem;
     background: #f2f2f2;
     padding: 1rem;
     border-radius: 8px;
-    width: 100%;
+    width: 35rem;
   }
   
   .existing-section h3 {
