--- a/direitoSimplesFront/src/app/question/question.component.html
+++ b/direitoSimplesFront/src/app/question/question.component.html
@@ -1,17 +1,3 @@
-<div class="question-header">
-  <img src="/assets/img/corujadireito.png" alt="Coruja Advogada" class="mascot" />
-  <div class="progress-container">
-    <span class="progress-label">{{ getProgress() }}%</span>
-    <div class="progress-bar">
-      <div class="progress-fill" [style.width.%]="getProgress()"></div>
-    </div>
-  </div>
-  <button class="fullscreen-button" (click)="toggleFullscreen()">
-    <button class="fullscreen-button" (click)="toggleFullscreen()" aria-label="Tela cheia">
-      <img src="/assets/icons/telacheia.svg" alt="Tela cheia" />
-    </button>
-  </button>
-</div>
 <div class="question-wrapper" *ngIf="question">
 
   <div class="question-content">
@@ -35,22 +21,16 @@
       </div>
     </div>
   </div>
+      <div class="voltar-estudo">
+      <button (click)="voltarEstudoDiario()">
+        🔙 Voltar para Estudo Diário
+      </button>
+    </div>
+
 
   <div style="text-align: right; margin-top: 1rem;">
     <button class="submit" (click)="submitAnswer()" [disabled]="!selectedAnswer">
       Responder
     </button>
   </div>
-  
-  <div class="question-footer">
-    <button class="skip" (click)="goToPreviousQuestion()" [disabled]="questionIndex === 0">
-      Voltar questão
-    </button>
-
-    <button class="skip" (click)="skipQuestion()" [disabled]="questionIndex >= totalQuestions - 1">
-      Próxima questão
-    </button>
-  </div>
-
-
 </div>
