--- a/direitoSimplesFront/src/app/question/question.component.scss
+++ b/direitoSimplesFront/src/app/question/question.component.scss
@@ -132,13 +132,6 @@
     color: red;
   }
   
-  .question-footer {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-top: 2rem;
-  }
-  
   .skip {
     background: #1a2e5a;
     color: white;
@@ -156,3 +149,23 @@
     font-weight: bold;
     font-size: 1rem;
   }
+
+  .voltar-estudo {
+  margin-top: 20px;
+  text-align: center;
+
+  button {
+    background-color: #3f83f8;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 8px;
+    cursor: pointer;
+    font-weight: bold;
+    transition: background-color 0.3s ease;
+
+    &:hover {
+      background-color: #1e40af;
+    }
+  }
+}
